@@ -1,5 +1,7 @@
 2007-12-23  Andreas Kirschbaum
 
+	* Remember last used player name.
+
 	* Implement overview map display.
 
 2007-12-22  Andreas Kirschbaum
